--- a/style.css
+++ b/style.css
@@ -13,18 +13,12 @@
     margin-left: 240px;
 }
 
-.both{
-    display: flex;
-    justify-content: space-between;
-}
-
 .title-web{
     margin:0 20px;
 }
 
-.nav-right{
-    float: right;
-    margin-left: 100px ;
+.menu{
+    margin-left: 621px;
 }
 
 .g{
@@ -68,16 +62,21 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #474747;
+    color: #3C354F;
+    font-size: 18px;
     /* align-items: center; */
 }
 
 .btn-primary{
     border-radius: 5px;
-    color: white;
-    background-color: #FD6E0A;
-    border: 0;
+    color: #3C354F;
+    border-radius: 8px;
+    background-color: rgba(11, 2, 35, 0.10);
     font-size: 18px;
     font-weight: 700;
     padding: 15px 35px;
+}
+
+.gap{
+    margin-right: 5px;
 }
