--- a/style.css
+++ b/style.css
@@ -80,3 +80,157 @@ nav a {
 .gap{
     margin-right: 5px;
 }
+
+.details{
+    width: 50%;
+    margin-right: 68px;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+
+.part-one{
+    color: #0B0223;
+    text-align: center;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 148px;
+}
+
+.option-bold {
+    text-align: center;
+    font-size: 95px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.list{
+    color: #534C64;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: lowercase;
+}
+
+/* .point{
+    margin-right: 276px;
+} */
+
+ul{
+    margin-left: 280px;
+    margin-top: 17px;
+    margin-bottom: 17px;
+    color: #534C64;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    list-style-type: none;
+}
+
+li{
+    margin-bottom: 17px;
+}
+
+.btn-one{
+    margin-left: 270px;
+    display: inline-flex;
+    margin-right: 24px;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+}
+
+.btn-two{
+    border-radius: 48px;
+    background: #4EC5F7;
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.option-container{
+    display: flex;
+}
+
+.home{
+    width: 600px;
+    height: 600px;
+    display: block;
+}
+
+.fourth{
+    width: 850px;
+    height: 489px;
+    margin-left: 240px;
+    margin-top: 55px;
+    margin-bottom: 56px;
+    display: flex;
+}
+
+.main-container{
+    display: flex;
+    background-color: #FDF9FC;
+}
+
+.header-description{
+    width: 500px;
+    height: 120px;
+    margin-top: 25px;
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 32px;
+}
+
+.main-second-part{
+    text-align: right;
+}
+
+.header{
+    margin-top: 95px;
+    text-align: right;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: #B969D7;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+
+.btn-three{
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    color: #FFF;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+h4{
+    color: #534C64;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 45px; /* 187.5% */
+}
